<resources>
    <string name="app_name">TrailPixel</string>
    <string name="textView_login">Авторизація</string>
    <string name="textView_registration">Реєстрація</string>
    <string name="TextPhone_1">Введіть номер телефону</string>
    <string name="TextPassword_1">Введіть пароль </string>
    <string name="TextPassword_2">Введіть повторно пороль </string>
    <string name="Button_login">Увійти </string>
    <string name="Button_registration">Зареєструватися </string>
    <string name="Button_list_event">Список евентів </string>
    <string name="imeg_button_trening">Задачі </string>
    <string name="imeg_button_shedule">Розклад </string>
    <string name="imeg_button_profile">Профіль </string>
    <string name="imag_button_additionally">Додатково </string>
    <string name="imag_button_add_trening">Додати категорію тренувань</string>
    <string name="ic_plus">Додати </string>
    <string name="texView_running">Кроки</string>
    <string name="texView_calories">Калорії</string>
    <string name="texView_distance">Відстань</string>
    <string name="img_button_quality">Досягнення</string>
    <string name="img_button_statistics">Статистика</string>
    <string name="textView_dynamic_count">0</string>
    <string name="textView_lesson">Уроки</string>
    <string name="textView_trening">Тренування</string>
    <string name="textView_calendar">Розклад</string>
    <string name="textView_profile">Профіль</string>
    <string name="textView">Текст</string>
    <string name="lessons_add">Додати урок</string>
    <string name="event_add">Зберегти подію</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

